Fixed minor FindBugs warnings.